@@ -19,15 +19,15 @@ if test "x$PKG_CONFIG" = "xno"; then
 fi
 AC_SUBST(MONO)
 
-PKG_CHECK_MODULES(MONO, mono >= 0.30.2)
+PKG_CHECK_MODULES(MONO, mono >= 0.31)
 AC_SUBST(MONO_CFLAGS)
 AC_SUBST(MONO_LIBS)
 
-PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp >= 0.17)
+PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp >= 0.18)
 AC_SUBST(GTK_SHARP_CFLAGS)
 AC_SUBST(GTK_SHARP_LIBS)
 
-PKG_CHECK_MODULES(DIACANVAS2, diacanvas2 >= 0.10.0)
+PKG_CHECK_MODULES(DIACANVAS2, diacanvas2 >= 0.12.0)
 AC_SUBST(DIACANVAS2_CFLAGS)
 AC_SUBST(DIACANVAS2_LIBS)
 
@@ -55,9 +55,9 @@ if test "x$GAPI_FIXUP" = "xno"; then
 fi
 AC_SUBST(GAPI_FIXUP)
 
-AC_PATH_PROG(GAPI_CODEGEN, gapi_codegen, no)
+AC_PATH_PROG(GAPI_CODEGEN, gapi-codegen, no)
 if test "x$GAPI_CODEGEN" = "xno"; then
-	AC_MSG_CHECKING(for gapi-codegen.exe)
+	AC_MSG_CHECKING(for gapi_codegen.exe)
 	GAPI_CODEGEN=`which gapi_codegen.exe 2> /dev/null`
 	if test "x$GAPI_CODEGEN" = "xno" ; then
 		AC_MSG_ERROR(['gapi_codegen'/'gapi_codegen.exe' not found.])
