@@ -9,14 +9,14 @@ ASSEMBLIES=	-r glib-sharp 			\
 		-r gnome-sharp			\
 		-r ../dia/diacanvas-sharp.dll
 
-RESOURCES=	-resource:glade/gui.glade		\
-		-resource:pixmaps/logo.png		\
-		-resource:pixmaps/selection.png		\
-		-resource:pixmaps/gimp-zoom.png		\
-		-resource:pixmaps/line.png		\
-		-resource:pixmaps/box.png		\
-		-resource:pixmaps/glade-image.png 	\
-		-resource:pixmaps/text.png
+RESOURCES=	-resource:glade/gui.glade,gui.glade			\
+		-resource:pixmaps/logo.png,logo.png			\
+		-resource:pixmaps/selection.png,selection.png		\
+		-resource:pixmaps/gimp-zoom.png,gimp-zoom.png		\
+		-resource:pixmaps/line.png,line.png			\
+		-resource:pixmaps/box.png,box.png			\
+		-resource:pixmaps/glade-image.png,glade-image.png 	\
+		-resource:pixmaps/text.png,text.png
 
 SAMPLE=		sample.exe
 
