@@ -3,6 +3,7 @@
 
 * Bugfixes
 * API updated
+* Targets DiaCanvas2-0.12.0
 
 0.3.0
 =====
